--- a/webapp/view/PRDetail.view.xml
+++ b/webapp/view/PRDetail.view.xml
@@ -220,7 +220,7 @@
                                             <Input cust:VHKey="Plant"
                                                    showValueHelp="true"
                                                    valueHelpRequest="onValHelpReq" value="{draft>Plant}"/>
-                                            <Input value="{draft>Quanity}" fieldWidth="50%"
+                                            <Input textAlign="End" value="{draft>Quanity}" fieldWidth="50%"
                                                    description="{draft>Unit}"/>
                                             <!--<u:Currency useSymbol="false" stringValue="{draft>PreqPrice}"-->
                                             <!--currency="{draft>Currency}"/>-->
