Fixes: * Save whole PR (with updated in header properties & deep properties * Attachment for PR Item Detail (unfinished)

--- a/webapp/view/ItemDetail.view.xml
+++ b/webapp/view/ItemDetail.view.xml
@@ -578,7 +578,7 @@
                 <content>
                     <ToolbarSpacer/>
                     <Button text="{i18n>save}" type="Emphasized" press="onSavePR"/>
-                    <Button text="{i18n>cancel}" type="Transparent" press="onCancelEditPR"/>
+                    <Button text="{i18n>cancel}" type="Transparent" press="back"/>
                 </content>
             </OverflowToolbar>
         </uxap:footer>
