--- a/webapp/view/PRDetail.view.xml
+++ b/webapp/view/PRDetail.view.xml
@@ -4,8 +4,10 @@
           xmlns:f="sap.ui.layout.form" xmlns:u="sap.ui.unified"
           xmlns:vhd="sap.ui.comp.valuehelpdialog"
           xmlns:fb="sap.ui.comp.filterbar"
-          xmlns:uxap="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:l="sap.ui.layout" xmlns:core="sap.ui.core">
-    <uxap:ObjectPageLayout showFooter="{= ${ui>/editing} }" upperCaseAnchorBar="false"
+          xmlns:uxap="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:l="sap.ui.layout"
+          xmlns:core="sap.ui.core">
+    <uxap:ObjectPageLayout busyIndicatorSize="Medium" busyIndicatorDelay="0" busy="{ui>/busy}" showFooter="{= ${ui>/editing} }"
+                           upperCaseAnchorBar="false"
                            showTitleInHeaderContent="false"
                            showHeaderContent="{= !${ui>/editing} }">
         <uxap:headerTitle>
@@ -32,6 +34,7 @@
                     <uxap:ObjectPageHeaderActionButton type="Transparent" hideText="false" hideIcon="false"
                                                        importance="High" icon="sap-icon://action"/>
                 </uxap:actions>
+
             </uxap:ObjectPageHeader>
         </uxap:headerTitle>
         <uxap:headerContent>
@@ -124,7 +127,7 @@
                                             <Text text="{display>Material}"/>
                                             <Text text="{display>MatlGroup}"/>
                                             <Text text="{display>Plant}"/>
-                                            <ObjectNumber number="{display>Quanity}" numberUnit="{display>Unit}"/>
+                                            <ObjectNumber number="{display>Quantity}" numberUnit="{display>Unit}"/>
                                             <u:Currency useSymbol="false" stringValue="{display>PreqPrice}"
                                                         currency="{display>Currency}"/>
                                             <Text text="{display>Requisitioner}"/>
@@ -220,7 +223,7 @@
                                             <Input cust:VHKey="Plant"
                                                    showValueHelp="true"
                                                    valueHelpRequest="onValHelpReq" value="{draft>Plant}"/>
-                                            <Input textAlign="End" value="{draft>Quanity}" fieldWidth="50%"
+                                            <Input textAlign="End" value="{draft>Quantity}" fieldWidth="50%"
                                                    description="{draft>Unit}"/>
                                             <!--<u:Currency useSymbol="false" stringValue="{draft>PreqPrice}"-->
                                             <!--currency="{draft>Currency}"/>-->
@@ -301,6 +304,23 @@
         <uxap:footer>
             <OverflowToolbar>
                 <content>
+                    <Button id="__btnMessagesStrip"
+                            type="{= ${message>/}.length > 0 ? 'Reject' : 'Default'}"
+                            icon="sap-icon://message-error"
+                            press="handleMessagePopoverPress">
+                        <dependents>
+                            <MessagePopover items="{message>/}">
+                                <items>
+                                    <MessageItem
+                                            description="{message>message}"
+                                            activeTitle="false"
+                                            type="{path: 'message>severity', formatter: '.formatter.serverityFormat' }"
+                                            title="{message>code}"
+                                            subtitle="{message>message}"/>
+                                </items>
+                            </MessagePopover>
+                        </dependents>
+                    </Button>
                     <ToolbarSpacer/>
                     <Button text="{i18n>save}" type="Emphasized" press="onSavePR"/>
                     <Button text="{i18n>cancel}" type="Transparent" press="onCancelEditPR"/>
