--- a/webapp/view/PRDetail.view.xml
+++ b/webapp/view/PRDetail.view.xml
@@ -6,7 +6,9 @@
           xmlns:fb="sap.ui.comp.filterbar"
           xmlns:uxap="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:l="sap.ui.layout"
           xmlns:core="sap.ui.core">
-    <uxap:ObjectPageLayout busyIndicatorSize="Medium" busyIndicatorDelay="0" busy="{ui>/busy}" showFooter="{= ${ui>/editing} }"
+    <uxap:ObjectPageLayout busyIndicatorSize="Auto" busyIndicatorDelay="0" busy="{ui>/busy}"
+                           showFooter="{= ${ui>/editing} }"
+                           enableLazyLoading="true"
                            upperCaseAnchorBar="false"
                            showTitleInHeaderContent="false"
                            showHeaderContent="{= !${ui>/editing} }">
@@ -322,6 +324,7 @@
                         </dependents>
                     </Button>
                     <ToolbarSpacer/>
+                    <Button text="{i18n>hold}" visible="{ui>/createMode}" type="Ghost" press="onHoldPR"/>
                     <Button text="{i18n>save}" type="Emphasized" press="onSavePR"/>
                     <Button text="{i18n>cancel}" type="Transparent" press="onCancelEditPR"/>
                 </content>
